QA_Ipreo/src/objects/Asset_License__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account associated with asset.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Need_to_Be_Updated__c</fullName>
        <formula>OR(
    AND(
         Auto_Populated_Active_Status__c = true
        , NOT(ISPICKVAL(Status__c, &apos;Active&apos;))
       )
   ,AND(
         Auto_Populated_Active_Status__c = false
        , NOT(ISPICKVAL(Status__c, &apos;Inactive&apos;))
       )
)</formula>
        <label>Active Need to Be Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Asset_Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Auto_Populated_Active_Status__c</fullName>
        <formula>AND(
      Start_Date__c &lt;= DATEVALUE(NOW())
     ,End_Date__c &gt;= DATEVALUE(NOW())
)</formula>
        <label>Auto Populated Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated contract.</description>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <description>Data Migration Run Name</description>
        <label>DM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LicenseUniqueKey__c</fullName>
        <description>data migration purpose</description>
        <externalId>true</externalId>
        <label>LicenseUniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Seats__c</fullName>
        <label>No. of Seats</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sponsored_Accounts__c</fullName>
        <label>No. of Sponsored Accounts</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity that lead to license.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All_License_Info</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Status__c</columns>
        <columns>No_of_Seats__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All License Info</label>
    </listViews>
    <listViews>
        <fullName>All_License_Info_Active</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Status__c</columns>
        <columns>No_of_Seats__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All License Info (Active)</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>License</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>